# Blender-----

./: Cargo.toml  README.md  build.rs  remove_export_button.py  resource.rc
backup/: app.rs.bak
backup2/: app.rs.bak2
examples/: translation.csv
scripts/: create_icon.ps1  fix_icon.ps1
src/: main.rs  main.rs.new
src/converters/: csv_converter.rs  mo_converter.rs  mod.rs  po_converter.rs  po_merger.rs
src/models/: app_state.rs  config.rs  mod.rs  openai.rs  operation.rs  state.rs  theme.rs
src/ui/: app.rs  app.rs.bak  app.rs.bak_custom_models  mod.rs
winres/: app.manifest  app.rc
