[package]
name = "rust-gui-example"
version = "0.1.0"
edition = "2021"

# 添加资源打包配置
[package.metadata.bundle]
name = "Blender本地化文件转换工具"
identifier = "com.example.blenderlocalizer"
icon = ["assets/icon.svg"]
resources = ["Fonts/*"]
copyright = "Copyright (c) 2023 Your Name"
category = "Utility"

# 指定要包含在构建中的文件
[package.metadata]
resources = ["Fonts/msyh.ttf", "assets/icon.svg"]

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
chrono = "0.4.31"
rayon = "1.8.0"
num_cpus = "1.16.0"
polib = "0.1.0"
rfd = "0.11.4"
encoding_rs = "0.8.33"
egui_extras = "0.22.0"
gettext = "0.4.0"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
threadpool = "1.8.1"
walkdir = "2.4.0"      # 用于递归遍历目录
whoami = "1.4.1"       # 用于获取当前用户名
is_elevated = "0.1.2"  # 用于检测程序是否以管理员权限运行
open = "4.1.0"         # 用于打开文件和目录的跨平台库
image = "0.24.7"       # 用于处理图像数据
# OpenAI API 集成
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
futures = "0.3"
urlencoding = "2.1.2"

# winapi相关依赖
winapi = { version = "0.3.9", features = ["windef", "winuser", "shellapi", "winerror", "errhandlingapi", "winbase", "processthreadsapi", "handleapi"] }
embed-manifest = "1.4.0"

# 添加打包和发布相关的依赖
[build-dependencies]
copy_to_output = "2.1.0"  # 帮助复制资源文件的工具
winres = "0.1.12"        # 用于嵌入Windows资源和manifest
